--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,14 @@
  */
 
 rootProject.name = 'automation'
+
+def includeSubdirectories() {
+  def currentDir = rootProject.projectDir
+  currentDir.eachDir { subDir ->
+    if (file("$subDir/build.gradle").exists()) {
+      include "${subDir.path.substring(currentDir.path.length()).replace(File.separator, ':')}"
+    }
+  }
+}
+
+includeSubdirectories()
